Fix for links gap

--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -36,9 +36,14 @@
 .navigation__links {
   display: grid;
   grid-template-columns: auto auto;
-  grid-column-gap: 2rem;
-  font-size: 1.8rem;
+  grid-column-gap: 1rem;
+  font-size: 1.6rem;
   justify-content: end;
   align-items: center;
   cursor: pointer;
+
+  @media (min-width: $lg) {
+    grid-column-gap: 2rem;
+    font-size: 1.8rem;
+  }
 }
